CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.7.3-dev

general
======================
* Change cruisecontrol.sh (main, binaryrelease, distcc) script to use more generic shebang (that also works on FreeBSD) (CC-789). Patch by Ivan "Rambius" Ivanov
* Update saxon to 9.0.0.6

build loop
======================

ClearCaseViewstrapper
---------------------
*  ClearCaseViewStrapper would cancel the build if the view was already mounted (CC-757).  Reported by Gerrit Brehmer. Patch by Glenn Opdycke-Hansen.

CMSynergy
---------------------
* Now throws exception when contacting the server fails. This will abort the build rather than continuing with potentially incomplete or incorrect information.

ExecBuilder
---------------------
* Improve error message when there are no arguments.
* Substitute properites in arguments (like ${label} or ${projectname})

Git Source Control & Bootstrapper
----------------------
* Add git and gitbootstrapper to default-plugins.properties. Reported by Garret Pick.

JabberPublisher
----------------------
* Add debug level log messages for troubleshooting.

JMX
----------------------
* Expose isLastBuildSuccessful via jmx (CC-493). Patch by Allan Wick, James Wilson.

Manipulator:
----------------------
* Add DeleteArtifacts manipulator to delete old artifacts directories (CC-446).
 
Origo Publisher
----------------------
* Add Publisher for the Origo collaboration platform (CC-775). Patch by Patrick Ruckstuhl.

ProjectConfig
----------------------
* ProjectConfig.toString() should return Project.toString() to avoid breaking external jmx scripts. Reported by Mark Hatton.

SVN
----------------------
* Relax SVN externals parsing (CC-736). Reported by Patrick Muller.

reporting jsp app
======================

Charts
----------------------
* Charts should now be cached rather than regenerated when no new build has run.

Modifications
----------------------